# jac-pre-commit

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
hooks/: __init__.py  jac_check.py  jac_format.py
